--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ html {
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
   box-sizing: border-box;
-  font: normal 100%/1.3 sans-serif;
+  font: normal 100%/1.3 Ubuntu, sans-serif;
 }
 
 *, *::before, *::after {
@@ -23,6 +23,8 @@ header {
   width: 100%;
   display: block;
   position: absolute;
+  color: #fff;
+  font-family: Ubuntu, sans-serif;
 }
 
 body {
