--- a/css/main.css
+++ b/css/main.css
@@ -45,10 +45,12 @@ nav a {
   margin-left: 0;
   display: inline-block;
   padding: .5em;
+  white-space: nowrap;
 }
 
 nav a:hover {
   color: #fff;
+  background-color: #6c8fe0;
 }
 
 li:hover {
@@ -60,6 +62,7 @@ nav ul  {
   list-style: none;
   padding: 0;
   display: flex;
+  font-size: 1.125rem;
 }
 
 @media only screen and (min-width: 25em) {
