--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,6 @@ nav ul {
   color: #6c8fe0;
   list-style: none;
   padding: 0;
-  display: flex;
   font-size: 1.125rem;
 }
 
@@ -70,6 +69,9 @@ nav ul {
   html {
     font-size: 100%;
     line-height: 1.3;
+  }
+  nav ul {
+    display: flex;
   }
 
   nav li {
